--- a/data/presentations.yml
+++ b/data/presentations.yml
@@ -10,3 +10,5 @@
 - title: "2023 Fourth Circuit Judicial Conference: Legal Ethics"
   revealjs: MRPC.html
 
+- title: "Ethics in Guardianship Representation"
+  revealjs: Guardianships-NCBA.html
